# neato-d7-lidar-reverse-engineering

./: .gitignore  README.md
docs/: D7_HARDWARE_REUSE_PLAN.md  NEATO_D7_LIDAR_REVERSE_ENGINEERING.md  ROS2_QUICKSTART.md
ros2_ws/src/d7_lidar_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/d7_lidar_ros/d7_lidar_ros/: lidar_scan_node.py  neato_parser.py
tools/: neato_d7_live_viewer.py
