<?xml version="1.0"?>
<package format="3">
  <name>d7_lidar_ros</name>
  <version>0.1.0</version>
  <description>ROS2 LaserScan publisher for the Neato Botvac D7 LiDAR.</description>
  <maintainer email="LukaGitH@users.noreply.github.com">LukaGitH</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
